# mnemo

./: .gitignore  Cargo.toml  README.md  config.example.toml
.github/workflows/: ci.yml
.sisyphus/: boulder.json
.sisyphus/notepads/anthropic-support/: decisions.md  issues.md  learnings.md
.sisyphus/notepads/deterministic-memory-selection/: decisions.md  issues.md  learnings.md
.sisyphus/notepads/dynamic-passthrough/: decisions.md  issues.md  learnings.md  problems.md
.sisyphus/notepads/nova-memory/: decisions.md  issues.md  learnings.md  problems.md
.sisyphus/plans/: deterministic-memory-selection.md  dynamic-passthrough.md  nova-memory.md
crates/mnemo/: Cargo.toml
crates/mnemo-cli/: Cargo.toml
crates/mnemo-cli/src/: error.rs  main.rs
crates/mnemo-cli/src/commands/: compact.rs  config.rs  memory.rs  mod.rs  model.rs  stats.rs
crates/mnemo-tui/: Cargo.toml
crates/mnemo-tui/src/: app.rs  event.rs  lib.rs  main.rs  tui.rs
crates/mnemo-tui/src/views/: detail.rs  memories.rs  mod.rs  requests.rs  stats.rs
crates/mnemo/src/: error.rs  lib.rs  main.rs  testing.rs
crates/mnemo/src/admin/: handlers.rs  mod.rs
crates/mnemo/src/cli/: mod.rs
crates/mnemo/src/config/: mod.rs
crates/mnemo/src/curator/: buffer.rs  hybrid.rs  local.rs  mod.rs  prompts.rs  provider.rs  remote.rs  types.rs
crates/mnemo/src/embedding/: mod.rs
crates/mnemo/src/memory/: ingestion.rs  injection_tracker.rs  mod.rs  retrieval.rs  tombstone.rs  types.rs
crates/mnemo/src/proxy/: error.rs  injection.rs  mod.rs  passthrough.rs  provider.rs  server.rs  session.rs
crates/mnemo/src/proxy/providers/: anthropic.rs  mod.rs  openai.rs
crates/mnemo/src/router/: mod.rs  ner.rs
crates/mnemo/src/storage/: compaction.rs  eviction.rs  filter.rs  lance.rs  tiers.rs
crates/mnemo/tests/: capacity_tests.rs  cli_tests.rs  curator_tests.rs  determinism_tests.rs  embedding_tests.rs  ingestion_tests.rs  integration_test.rs  provider_tests.rs  proxy_tests.rs  router_tests.rs  session_tests.rs  storage_tests.rs  streaming_tests.rs  weight_tests.rs
crates/nova-cli/: Cargo.toml
crates/nova-cli/src/: error.rs  lib.rs  main.rs  output.rs
crates/nova-cli/src/commands/: compact.rs  config.rs  memory.rs  mod.rs  stats.rs
crates/nova-memory/: Cargo.toml
crates/nova-memory/src/: error.rs  lib.rs  main.rs
crates/nova-memory/src/cli/: mod.rs
crates/nova-memory/src/config/: mod.rs
crates/nova-memory/src/embedding/: mod.rs
crates/nova-memory/src/memory/: ingestion.rs  mod.rs  retrieval.rs  tombstone.rs  types.rs  weight.rs
crates/nova-memory/src/proxy/: capture.rs  error.rs  injection.rs  mod.rs  passthrough.rs  server.rs  streaming.rs
crates/nova-memory/src/router/: mod.rs  ner.rs
crates/nova-memory/src/storage/: compaction.rs  eviction.rs  filter.rs  lance.rs  mod.rs  tiers.rs
crates/nova-memory/tests/: capacity_tests.rs  cli_tests.rs  embedding_tests.rs  ingestion_tests.rs  integration_test.rs  proxy_tests.rs  router_tests.rs  storage_tests.rs  streaming_tests.rs  weight_tests.rs
docs/: README.md
docs/integrations/: openclaw.md  opencode.md
examples/: README.md
examples/openrouter-deno/: README.md  add-memory.ts  config.toml  test-chat.ts
plugins/openclaw-mnemo/: README.md  openclaw.plugin.json  package-lock.json  package.json
plugins/openclaw-mnemo/src/: index.ts
plugins/opencode-mnemo/: README.md  package-lock.json  package.json  tsconfig.json
plugins/opencode-mnemo/src/: index.ts
scripts/: test-full-flow.sh
