[workspace]
members = ["crates/nova-memory", "crates/nova-cli"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Nova Memory Team"]
license = "MIT"
repository = "https://github.com/watzon/nova-memory"
rust-version = "1.85"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true
