[workspace]
members = ["crates/mnemo", "crates/mnemo-cli"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Mnemo Team"]
license = "MIT"
repository = "https://github.com/watzon/mnemo"
rust-version = "1.85"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Config parsing
toml = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "1"

# Identifiers
uuid = { version = "1", features = ["v4", "serde"] }

# Timestamps
chrono = { version = "0.4", features = ["serde"] }

# Directory utilities
dirs = "5"

# Embeddings
fastembed = "5.8"

# Vector database
lancedb = "0.23"
arrow-array = "56"
arrow-schema = "56"

# Async utilities
futures = "0.3"
bytes = "1"
tokio-stream = "0.1"

# HTTP server (axum)
axum = { version = "0.8", features = ["http2"] }
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
tower = { version = "0.5" }
tower-http = { version = "0.6", features = ["trace", "timeout"] }

# HTTP client
reqwest = { version = "0.12", features = ["rustls-tls", "json"] }

# URL parsing
url = "2"

# Temporary directories for testing
tempfile = "3"

# Testing mock servers
wiremock = "0.6"

# CLI
clap = { version = "4", features = ["derive"] }
comfy-table = "7"

# Machine learning (Candle)
candle-core = "0.9"
candle-nn = "0.9"
candle-transformers = "0.9"
hf-hub = "0.4"
tokenizers = "0.22"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true
