[package]
name = "mnemo-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "CLI management tool for the Mnemo LLM memory proxy"
readme = "../../README.md"
keywords = ["llm", "memory", "cli", "mnemo"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "mnemo-cli"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
comfy-table = { workspace = true }
dirs = { workspace = true }
mnemo-server = { version = "0.1.0", path = "../mnemo" }
