[package]
name = "mnemo-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "A transparent HTTP proxy that gives your LLM long-term memory"
readme = "../../README.md"
keywords = ["llm", "memory", "proxy", "openai", "anthropic"]
categories = ["command-line-utilities", "web-programming::http-server", "development-tools"]

[[bin]]
name = "mnemo"
path = "src/main.rs"

[dependencies]
async-trait = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }
fastembed = { workspace = true }
lancedb = { workspace = true }
arrow-array = { workspace = true }
arrow-schema = { workspace = true }
futures = { workspace = true }
bytes = { workspace = true }
tokio-stream = { workspace = true }
axum = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
reqwest = { workspace = true }
url = { workspace = true }
candle-core = { workspace = true }
candle-nn = { workspace = true }
candle-transformers = { workspace = true }
hf-hub = { workspace = true }
tokenizers = { workspace = true }
clap = { workspace = true }
urlencoding = "2.1"
lru = { workspace = true }

# Optional dependencies for local curator
mistralrs = { version = "0.7", optional = true }

[features]
default = []
ml-tests = []
curator-local = ["dep:mistralrs"]

[dev-dependencies]
tempfile = { workspace = true }
wiremock = { workspace = true }
